<resources>
    <string name="app_name">FilmSpace</string>

    <!-- activty_register strings -->
    <string name="register_title">Register</string>
    <string name="click_to_login">click to login</string>
    <string name="email_hint">email: </string>
    <string name="password_hint">password: </string>
    <string name="confirmpassword_hint">confirm password: </string>
    <string name="username_hint">username: </string>

    <!-- activity_login strings -->
    <string name="login_title">Login</string>
    <string name="email_title">Email:</string>
    <string name="password_title">Password:</string>
    <string name="click_to_register">click to register</string>

    <!-- navbar strings -->
    <string name="navbar_title">FilmSpace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- movie details -->
    <string name="movie_title">Movie Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_overview">Hmm... We can\'t seem to get the information for this movie... Do submit a report and we will resolve this as soon as possible! </string>
    <string name="cast_header">Casts</string>

    <!-- Home page strings -->
    <string name="Popular_title">Popular</string>
    <string name="Now_playing">Now Playing</string>
    <string name="Top_Rated">Top Rated</string>
    <string name="Upcoming">Upcoming</string>
    <string name="Favourite_Genres"></string>


    <!-- Accept friend request button -->
    <string name="accept_friend_request">Accept Friend</string>

    <!-- Genre page strings -->
    <string name="done">done</string>

    <!-- Notification strings -->
    <string name="channel_name">testnotifs</string>
    <string name="channel_description">Channel for sending test notifications</string>
    <string name="testNotificationTitle">It works!! </string>
    <string name="testNotificationContent">Yay!! You are receiving notifications from FilmSpace!</string>
</resources>