<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@color/black"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/popular_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Popular_title"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_title" />

            <TextView
                android:id="@+id/upcoming_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Upcoming"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcoming_title" />

            <TextView
                android:id="@+id/top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Top_Rated"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcoming_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_rated_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/top_rated"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Now_playing"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_rated_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/now_playing_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/now_playing"
                android:orientation="horizontal"/>
        </androidx.constraintlayout.widget.ConstraintLayout>




        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@drawable/btn_left_arrrow"
                android:layout_weight="1"/>
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/page_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="number"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@drawable/btn_right_arrow"
                android:layout_weight="1"/>
        </LinearLayout>
       -->

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>